Settings_Features: allow reordering weather now features

--- a/SimpleWeather.Windows/Main/WeatherNow.Resources.xaml
+++ b/SimpleWeather.Windows/Main/WeatherNow.Resources.xaml
@@ -28,4 +28,5 @@
     <converters:DetailsItemGridFilterConverter x:Key="detailsFilter" />
     <converters:GraphDataVisibilityConverter x:Key="graphDataConv" />
     <converters:TempToColorTempConverter x:Key="tempToColorTempConverter" FallbackColor="{ThemeResource ForegroundColor}" />
+    <converters:UriToImageSourceConverter x:Key="uriImgSrcConv" />
 </ResourceDictionary>
